k8s-config/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: dips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: efremovrd/bmstu-dips-lab4-gateway-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: dips
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
